# template_python_project

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  test_cyclonedx_fix.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container.yml  pr-validation.yml  release.yml
docs/: code-quality-standards.md  examples.md  github-cli-reference.md  github-configuration.md  release-workflow.md  supply-chain-security.md  workflow-architecture.md
scripts/: bootstrap.ps1  bootstrap.sh  configure-github-repo.sh
src/template_python_project/: __init__.py  __main__.py  main.py
tests/: test_hello.py
